implement new Featurs Quiz

--- a/Handouts/Blog.html
+++ b/Handouts/Blog.html
@@ -263,7 +263,7 @@ But how exactly is AI impacting student learning, and what does it mean for you?
 </div>
      <h3>Quick Links-</h3>
      <div  id="quicklinks">
-    <a href="../home" class="active">Home</a><a href="../services/web-development">Website Development</a><a href="../services/seo">SEO</a> <a href="notes">Notes</a> <a href="blog"  style="background-color: #555;">Blogs</a><a href="assignment">Programming Assignment</a>  <a href="../internship-program">Mentorship & Internship</a>  <a href="../about">About</a>  <a href="../lettalk">Let's Talk</a>
+    <a href="../home" class="active">Home</a><a href="../services/web-development">Website Development</a><a href="../services/seo">SEO</a> <a href="notes">Notes</a> <a href="blog"  style="color: #181313;">Blogs</a><a href="assignment">Programming Assignment</a>  <a href="../internship-program">Mentorship & Internship</a>  <a href="../about">About</a>  <a href="../lettalk">Let's Talk</a>
       </div>
       <br>
       <div class="contact">
