--- a/Handouts/assignment.html
+++ b/Handouts/assignment.html
@@ -192,7 +192,7 @@
     <hr>
 </div>
      <h3>Quick Links-</h3>
-     <div  id="quicklinks">  <a href="../home" class="active">Home</a>  <a href="../services/web-development">Website Development</a>  <a href="../services/seo">SEO</a> <a href="notes" >Notes</a> <a href="blog">Blogs</a> <a href="assignment" style="background-color: #555;">Programming Assignment</a><a href="../internship-program">Mentorship & Internship</a><a href="../about">About</a><a href="../lettalk">Let's Talk</a> </div>
+     <div  id="quicklinks">  <a href="../home" class="active">Home</a>  <a href="../services/web-development">Website Development</a>  <a href="../services/seo">SEO</a> <a href="notes" >Notes</a> <a href="blog">Blogs</a> <a href="assignment" style="color: #080606;">Programming Assignment</a><a href="../internship-program">Mentorship & Internship</a><a href="../about">About</a><a href="../lettalk">Let's Talk</a> </div>
   <br>
       <div class="contact">
         <br><a href="#Contact-section" title="Social Platform"><i class="fa-solid fa-phone"></i></a> &nbsp;+91 9155726625
