--- a/Index.html
+++ b/Index.html
@@ -272,7 +272,7 @@ Whether you're passionate about crafting pixel-perfect frontends or building pow
 <!-- Quick Links  -->
      <h3>Quick Links-</h3>
      <div  id="quicklinks">
-  <a href="home" class="active" style="background-color: #555;">Home</a>  <a href="services/web-development" title="Web Development From CampusXchange">Website Development</a><a href="services/seo">SEO</a><a href="handouts/notes" title="Technical Notes">Notes</a><a href="handouts/blog" title="Scripted Blogs">Blogs</a><a href="handouts/assignment" title="Programming Lab Assignment">Programming Assignment</a><a href="internship-program">Mentorship & Internship</a><a href="about">About</a><a href="lettalk">Let's Talk</a>
+  <a href="home" class="active" style="color: #000000;">Home</a>  <a href="services/web-development" title="Web Development From CampusXchange">Website Development</a><a href="services/seo">SEO</a><a href="handouts/notes" title="Technical Notes">Notes</a><a href="handouts/blog" title="Scripted Blogs">Blogs</a><a href="handouts/assignment" title="Programming Lab Assignment">Programming Assignment</a><a href="internship-program">Mentorship & Internship</a><a href="about">About</a><a href="lettalk">Let's Talk</a>
      </div>
 <br>
 <br>
