--- a/Services/SEO.html
+++ b/Services/SEO.html
@@ -566,7 +566,7 @@ document.getElementById("seoForm").addEventListener("submit", function(event){
 <!-- Quick Links -->
      <h3>Quick Links-</h3>
      <div  id="quicklinks">
-<a href="../home" class="active">Home</a> <a href="web-development">Website Development</a> <a href="seo" style="background-color: #555;">SEO</a><a href="../handouts/notes">Notes</a> <a href="../handouts/blog">Blogs</a> <a href="../handouts/assignment">Programming Assignment</a>  <a href="../internship-program">Mentorship & Internship</a>  <a href="../about">About</a><a href="../lettalk">Let's Talk</a>
+<a href="../home" class="active">Home</a> <a href="web-development">Website Development</a> <a href="seo" style="color: #030101;">SEO</a><a href="../handouts/notes">Notes</a> <a href="../handouts/blog">Blogs</a> <a href="../handouts/assignment">Programming Assignment</a>  <a href="../internship-program">Mentorship & Internship</a>  <a href="../about">About</a><a href="../lettalk">Let's Talk</a>
       </div>
       <br>
   <!-- contact links  -->
