--- a/assets/Testing/T2.html
+++ b/assets/Testing/T2.html
@@ -1,14 +1,136 @@
-<section class='verifed-section' id='verified'>
-    <div class='intern-info'>
-     <div class='verified-badge'><i class='fa-solid fa-certificate'></i> Verified by CampusXchange</div>
-      <p><strong>Name:</strong> <?php echo $Name ?></p>
-      <p><strong>Domain:</strong><?php echo $Domain ?></p>
-      <p><strong>Duration:</strong><?php echo $Duration ?></p>
-      <p><strong>Internship ID:</strong> <span class='intern-id'><?php echo $Email ?></span></p>
-      <p><strong>Status:</strong> <span style='color:#22c55e;font-weight:bold;'>Active & Verified</span></p>
-      <p><strong>About:</strong> Priya Sharma has successfully completed all requirements for the CampusXchange internship program in Web Development, demonstrating strong technical and teamwork skills. All credentials have been verified by the CampusXchange team.</p>
-      <img src='../assets/Images/campusxchange-logo.svg' alt='campusxchange-logo'> <img src='../assets/Images/founder-sign.jpg' alt='campusxchange-logo'>   <img src='../assets/Images/verified-stamp.jpg' alt='campusxchange-logo'>
-      <a href='../internship-program' aria-label='know more about internship program offer by campusxchange'><p>Know More About CampusXchange</p></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tech Stack We Work With</title>
+  <style>
+    /* Reset and base */
+    * {
+      box-sizing: border-box;
+    }
 
+
+    /* Container box */
+    .tech-stack-box {
+      background: #fff;
+      max-width: 100%;
+      width: 100%;
+      border-radius: 16px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
+      padding: 40px 50px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 40px 20px;
+    }
+
+    /* Section title spanning full width */
+    .tech-stack-box > h2 {
+      grid-column: 1 / -1;
+      font-size: 2.6rem;
+      color: #005f99;
+      text-align: center;
+      margin: 0 0 40px;
+      letter-spacing: 1.1px;
+      font-weight: 700;
+    }
+
+    /* Each category */
+    .tech-category {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .tech-category h3 {
+      font-size: 1.5rem;
+      color: #007acc;
+      border-bottom: 3px solid #007acc;
+      padding-bottom: 6px;
+      margin: 0;
+      font-weight: 600;
+    }
+
+    /* Icons container */
+    .icons {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 18px;
+      justify-content: flex-start;
+    }
+
+    /* Icon style */
+    .icons img {
+      width: 56px;
+      height: 56px;
+      background: #f9faff;
+      padding: 10px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 122, 204, 0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: default;
+      object-fit: contain;
+    }
+
+    .icons img:hover,
+    .icons img:focus {
+      transform: scale(1.2);
+      box-shadow: 0 8px 20px rgba(0, 122, 204, 0.5);
+      outline: none;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 480px) {
+      .tech-stack-box {
+        padding: 30px 20px;
+        grid-template-columns: 1fr;
+        gap: 30px;
+      }
+
+      .icons {
+        justify-content: center;
+      }
+    }
+  </style>
+</head>
+<body>
+  <section class="tech-stack-box" aria-label="Tech Stack We Work With">
+    <h2>Tech Stack We Work With</h2>
+
+    <div class="tech-category">
+      <h3>Front-End</h3>
+      <div class="icons">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML5 Logo" />
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg" alt="CSS3 Logo" />
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript Logo" />
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" alt="React Logo" />
+      </div>
     </div>
-</section>
+
+    <div class="tech-category">
+      <h3>Back-End</h3>
+      <div class="icons">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/php/php-original.svg" alt="PHP Logo" />
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" alt="Python Logo" />
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" alt="Node.js Logo" />
+      </div>
+    </div>
+
+    <div class="tech-category">
+      <h3>Database</h3>
+      <div class="icons">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original.svg" alt="MySQL Logo" />
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" alt="MongoDB Logo" />
+      </div>
+    </div>
+
+    <div class="tech-category">
+      <h3>Server</h3>
+      <div class="icons">
+        <img src="../assets/Images/bluehostLogo.webp" alt="Bluehost Logo" />
+        <img src="../assets/Images/HostingerLogo.webp" alt="Hostinger Logo" />
+      </div>
+    </div>
+  </section>
+</body>
+</html>
