--- a/assets/Testing/Testing.html
+++ b/assets/Testing/Testing.html
@@ -8,10 +8,10 @@
     <body style='margin: 0; padding:2px; background-color: #f4f4f4; font-family: Arial, sans-serif; line-height: 1.2; color: #333;'>
     <div style='max-width: 1000px; margin: auto; padding: 15px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);'>
 
-        <img src='../Images/client_email_banner.png' height='auto' width='100%' style='margin-top: 25px;font-size:2rem;'>
-        <h1 style='color: #ffffff;padding:10px;height:150px; background: linear-gradient(to right, #6366f1,#f43f5e); text-align: center; font-size:1.5rem;'>🎉 Hello
+
+        <h1 style='color: #ffffff;padding:10px;height:150px; background: linear-gradient(to right, #6366f1,#f43f5e); text-align: center; font-size:1.5rem;'>
             <br>You are looking for a website 🌐
-            <br><p style='font-size: 1rem;'>$name</p>
+
         </h1>
 
         <div style='background-color: #ecf0f1; padding: 10px; border-radius: 5px; margin-top: 20px;'>
