--- a/unittesting.html
+++ b/unittesting.html
@@ -321,7 +321,7 @@ include "src/config.php";
   }
   #newsletterForm
   {
-
+    background-color: var(--primary-color);
     padding: 10% 0;
     height: 300px;
   }
@@ -348,16 +348,42 @@ include "src/config.php";
   }
 
 </style>
+
 <body>
    <!-- animated cursor ------------------->
  <div class="cursor"></div>
 <!-- animated cursor end ---------------->
    <!--About page Header and navbar ----------------------------------------------------------------------------------------->
    <header style="border-radius: 0;">
-      <div class="Logo"><img src="assets/Images/transparent-logo-campusxchange.png" title="CampusXchange Logo"></div>
+      <div class="Logo"><img src="assets/Images/campusxchange-logo.svg" title="CampusXchange Logo"></div>
    </header>
-   <?php  include "components/header.php" ?>
-
+<div class="topnav" id="myTopnav">
+  <a href="home" class="active">Home</a>
+   <div class="dropdown">
+    <button class="dropbtn">Services
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="services/web-development">Website Development</a>
+      <a href="services/seo">SEO</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn">Handouts
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="handouts/notes">Notes</a>
+      <a href="handouts/blog">Blogs</a>
+      <a href="handouts/assignment">Programming Assignment</a>
+    </div>
+  </div>
+  <a href="internship-program">Mentorship & Internship</a>
+  <a href="about">About</a>
+  <a href="lettalk"  style="background-color: #555;">Let's Talk</a>
+    <!--// mobile Togglebar ----------------------------------------------------------------------------------------->
+ <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
   <!--about page Header and navbar end ----------------------------------------------------------------------------------------->
 <br>
 <main>
@@ -490,6 +516,9 @@ include("feedback.php");
 
         </section>
         <!-- fotter section end  here --------------------------------------------------------------------------------->
+<script>
+// Simple carousel for Mission & Vision
+</script>
 <script src="script.js"></script>
 
 </body>
