Fix console errors

--- a/assets/Testing/Testing.html
+++ b/assets/Testing/Testing.html
@@ -1,35 +1,63 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Document</title>
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <title>CampusXchange — Website Inquiry</title>
 </head>
-    <body style='margin: 0; padding:2px; background-color: #f4f4f4; font-family: Arial, sans-serif; line-height: 1.2; color: #333;'>
-    <div style='max-width: 1000px; margin: auto; padding: 15px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);'>
+<script>
+setTimeout(() => {alert("✅ Thank you for submitting your details! \n\nPlease check your inbox for our email. If you don't see it there, kindly check your spam or junk folder.");
+  window.location.href='web-development'}, 4000);
 
+  </script>
+<body style='margin: 0; padding: 2px; background-color: #f4f4f4; font-family: Arial, sans-serif; line-height: 1.5; color: #333;'>
+  <div style='max-width: 800px; margin: auto; padding: 15px;  box-shadow: 0 2px 10px rgba(0,0,0,0.1); background-color: #fff;'>
 
-        <h1 style='color: #ffffff;padding:10px;height:150px; background: linear-gradient(to right, #6366f1,#f43f5e); text-align: center; font-size:1.5rem;'>
-            <br>You are looking for a website 🌐
+    <!-- Header Image -->
+    <img src='../Images/campusxchange-email-header.jpg' alt='CampusXchange Logo' style='width: 100%; display: block;' />
 
-        </h1>
+    <!-- Title Section -->
 
-        <div style='background-color: #ecf0f1; padding: 10px; border-radius: 5px; margin-top: 20px;'>
-Thanks for reaching out to CampusXchange—where ideas become digital realities. Whether you're launching a startup, showcasing your brand, or building a personal portfolio, our expert team is ready to craft a website that’s fast, functional, and uniquely yours.
-            <p>🌟 <strong>Our Support Team will contact you within 24 Hr.</strong></p>
-            <p>Be Happy with CampusXchange</p>
-        </div>
+    <h1 style='color: #fff; padding: 40px 10px; background: linear-gradient(to right, #6366f1, #f43f5e); text-align: center; font-size: 1.6rem;margin: 0;'>
+     $name  You're Looking for a Website 🌐
+    </h1>
 
-        <div style='margin-top: 30px; font-size: 0.9em; color: #555; border-top: 1px solid #ddd; padding-top: 20px;'>
-            <p>Explore oue social Handle</p>
-            <ul style='padding-left: 20px;'>
-                <li>LinkedIn: <a href='#' style='color: #2980b9;'>CampusXchange</a></li><br>
-                <li>Telegram: <a href='https://t.me/CampusXchange' target='_blank' style='color: #2980b9;'>https://t.me/CampusXchange</a></li><br>
-                <li>Email: <a href='#' style='color: #2980b9;'>support@CampusXchange</a></li><br>
-                <li>Website: <a href='https://pankajdas0025.github.io/CampusXchange/' target='_blank' style='color: #2980b9;'>www.CampusXchange.org</a></li><br>
-            </ul>
-        </div>
+    <!-- Body Section -->
+    <div style='background-color: #ecf0f1; padding: 20px;  margin-top: 20px;'>
+      <p style='margin: 0 0 10px;'>Thanks for reaching out to <strong>CampusXchange</strong> — where ideas become digital realities.</p>
+      <p style='margin: 0 0 10px;'>Whether you're launching a startup, showcasing your brand, or building a personal portfolio, our expert team is ready to craft a website that’s fast, functional, and uniquely yours.</p>
+      <p>🌟 <strong>Our Support Team will contact you within 24 hours.</strong></p>
+      <p>Be Happy with <strong>CampusXchange</strong>!</p>
     </div>
-    </body>
 
+    <!-- Social Section -->
+    <div style='margin-top: 30px; font-size: 0.95em; color: #555; border-top: 1px solid #ddd; padding-top: 20px;'>
+      <p style='font-weight: bold; margin-bottom: 10px;'>Explore our Social Handles:</p>
+      <ul style='padding-left: 15px; list-style: none; line-height: 1.8;'>
+                <li>Facebook: <a href='https://www.facebook.com/campusxchangeservices' style='color: #2980b9;'>Click Here</a></li><br>
+                <li>Instagram: <a href='https://www.instagram.com/campusxchange_services/' target='_blank' style='color: #2980b9;'>Click Here</a></li><br>
+                <li>LinkedIn: <a href='https://www.linkedin.com/company/campusxchange-services/' target='_blank' style='color: #2980b9;'>Click Here</a></li><br>
+                <li>Email: <a href='mailto:campusxchangeservices@gmail.com' style='color: #2980b9;'>campusxchangeservices@gmail.com</a></li><br>
+                <br>
+      </ul>
+    </div>
+
+    <!-- Modern Footer -->
+    <footer style='margin-top: 25px; text-align: center; font-size: 0.85rem; color: #777; background-color: #fafafa; padding: 15px; '>
+      <p style='margin: 8px 0;'>You're receiving this email because you showed interest in <strong>CampusXchange</strong> web services.</p>
+      <p style='margin: 8px 0;'>If this wasn’t you, simply ignore this email.</p>
+      <div style='margin-top: 10px;'>
+        <a href='https://campusxchange.wuaze.com' target='_blank' style='margin: 0 6px; text-decoration: none; color: #6366f1;'>Home</a> |
+        <a href='https://campusxchange.wuaze.com/services/webdevelopment' style='margin: 0 6px; text-decoration: none; color: #6366f1;'>Services</a> |
+        <a href='https://campusxchange.wuaze.com/lettalk' style='margin: 0 6px; text-decoration: none; color: #6366f1;'>Contact</a>
+      </div>
+      <p style='margin-top: 12px; color: #999;'>© <span id='year'></span> CampusXchange. All rights reserved.</p>
+    </footer>
+  </div>
+
+  <!-- Dynamic Year Script -->
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
 </html>
