--- a/assets/Testing/Testing.html
+++ b/assets/Testing/Testing.html
@@ -1,63 +1,184 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <title>CampusXchange — Website Inquiry</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Explore CampusXchange's YouTube courses — from web development to programming. Watch uploaded lessons or get notified about upcoming ones. Learn, grow, and build your skills with us!">
+  <meta name="keywords" content="CampusXchange, YouTube Courses, Web Development, Programming, HTML, CSS, JavaScript, Tutorials, Learn Online">
+  <meta name="author" content="CampusXchange">
+  <title>CampusXchange Courses | Learn from YouTube Tutorials</title>
+
+  <link rel="icon" href="assets/Images/favicon.png" type="image/png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
+
+  <style>
+    :root {
+      --primary: #005eff;
+      --secondary: #f7f9fc;
+      --text-dark: #222;
+      --text-light: #555;
+      --radius: 12px;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      background-color: var(--secondary);
+      color: var(--text-dark);
+      line-height: 1.6;
+    }
+
+    header {
+      text-align: center;
+      padding: 3rem 1rem 1.5rem;
+    }
+
+    header h1 {
+      font-size: 2.2rem;
+      color: var(--primary);
+    }
+
+    header p {
+      color: var(--text-light);
+      max-width: 700px;
+      margin: 0.5rem auto 1.5rem;
+    }
+
+    .section-title {
+      text-align: center;
+      margin: 3rem 0 1.5rem;
+      font-size: 1.8rem;
+      color: var(--primary);
+    }
+
+    .courses-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 2rem;
+      padding: 0 1.5rem 3rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .course-card {
+      background: #fff;
+      border-radius: var(--radius);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
+
+    .course-card:hover {
+      transform: translateY(-5px);
+    }
+
+    iframe {
+      width: 100%;
+      height: 220px;
+      border: none;
+    }
+
+    .course-content {
+      padding: 1rem 1.2rem 1.5rem;
+      text-align: center;
+    }
+
+    .course-content h3 {
+      font-size: 1.1rem;
+      margin-bottom: 0.5rem;
+      color: var(--text-dark);
+    }
+
+    .course-content p {
+      color: var(--text-light);
+      font-size: 0.9rem;
+      margin-bottom: 1rem;
+    }
+
+    .cta-btn {
+      background: var(--primary);
+      color: #fff;
+      padding: 0.6rem 1.4rem;
+      border: none;
+      border-radius: var(--radius);
+      text-decoration: none;
+      font-weight: 600;
+      transition: background 0.3s ease;
+    }
+
+    .cta-btn:hover {
+      background: #003bb5;
+    }
+
+
+    @media (max-width: 480px) {
+      header h1 { font-size: 1.8rem; }
+      .section-title { font-size: 1.5rem; }
+      iframe { height: 200px; }
+    }
+  </style>
 </head>
-<script>
-setTimeout(() => {alert("✅ Thank you for submitting your details! \n\nPlease check your inbox for our email. If you don't see it there, kindly check your spam or junk folder.");
-  window.location.href='web-development'}, 4000);
 
-  </script>
-<body style='margin: 0; padding: 2px; background-color: #f4f4f4; font-family: Arial, sans-serif; line-height: 1.5; color: #333;'>
-  <div style='max-width: 800px; margin: auto; padding: 15px;  box-shadow: 0 2px 10px rgba(0,0,0,0.1); background-color: #fff;'>
+<body>
+  <header>
+    <h1>CampusXchange YouTube Courses</h1>
+    <p>Enhance your learning with our free YouTube tutorials. Explore uploaded courses or stay tuned for upcoming ones.</p>
+  </header>
 
-    <!-- Header Image -->
-    <img src='../Images/campusxchange-email-header.jpg' alt='CampusXchange Logo' style='width: 100%; display: block;' />
-
-    <!-- Title Section -->
-
-    <h1 style='color: #fff; padding: 40px 10px; background: linear-gradient(to right, #6366f1, #f43f5e); text-align: center; font-size: 1.6rem;margin: 0;'>
-     $name  You're Looking for a Website 🌐
-    </h1>
-
-    <!-- Body Section -->
-    <div style='background-color: #ecf0f1; padding: 20px;  margin-top: 20px;'>
-      <p style='margin: 0 0 10px;'>Thanks for reaching out to <strong>CampusXchange</strong> — where ideas become digital realities.</p>
-      <p style='margin: 0 0 10px;'>Whether you're launching a startup, showcasing your brand, or building a personal portfolio, our expert team is ready to craft a website that’s fast, functional, and uniquely yours.</p>
-      <p>🌟 <strong>Our Support Team will contact you within 24 hours.</strong></p>
-      <p>Be Happy with <strong>CampusXchange</strong>!</p>
-    </div>
-
-    <!-- Social Section -->
-    <div style='margin-top: 30px; font-size: 0.95em; color: #555; border-top: 1px solid #ddd; padding-top: 20px;'>
-      <p style='font-weight: bold; margin-bottom: 10px;'>Explore our Social Handles:</p>
-      <ul style='padding-left: 15px; list-style: none; line-height: 1.8;'>
-                <li>Facebook: <a href='https://www.facebook.com/campusxchangeservices' style='color: #2980b9;'>Click Here</a></li><br>
-                <li>Instagram: <a href='https://www.instagram.com/campusxchange_services/' target='_blank' style='color: #2980b9;'>Click Here</a></li><br>
-                <li>LinkedIn: <a href='https://www.linkedin.com/company/campusxchange-services/' target='_blank' style='color: #2980b9;'>Click Here</a></li><br>
-                <li>Email: <a href='mailto:campusxchangeservices@gmail.com' style='color: #2980b9;'>campusxchangeservices@gmail.com</a></li><br>
-                <br>
-      </ul>
-    </div>
-
-    <!-- Modern Footer -->
-    <footer style='margin-top: 25px; text-align: center; font-size: 0.85rem; color: #777; background-color: #fafafa; padding: 15px; '>
-      <p style='margin: 8px 0;'>You're receiving this email because you showed interest in <strong>CampusXchange</strong> web services.</p>
-      <p style='margin: 8px 0;'>If this wasn’t you, simply ignore this email.</p>
-      <div style='margin-top: 10px;'>
-        <a href='https://campusxchange.wuaze.com' target='_blank' style='margin: 0 6px; text-decoration: none; color: #6366f1;'>Home</a> |
-        <a href='https://campusxchange.wuaze.com/services/webdevelopment' style='margin: 0 6px; text-decoration: none; color: #6366f1;'>Services</a> |
-        <a href='https://campusxchange.wuaze.com/lettalk' style='margin: 0 6px; text-decoration: none; color: #6366f1;'>Contact</a>
+  <!-- Uploaded Courses -->
+  <section>
+    <h2 class="section-title">📺 Uploaded Courses</h2>
+    <div class="courses-grid">
+      <!-- Example Course 1 -->
+      <div class="course-card">
+        <iframe src="https://www.youtube.com/embed/dD2EISBDjWM" title="HTML Basics - CampusXchange"></iframe>
+        <div class="course-content">
+          <h3>HTML Basics - From Scratch</h3>
+          <p>Learn the fundamentals of HTML including structure, tags, and your first webpage.</p>
+          <a href="https://youtu.be/dD2EISBDjWM" target="_blank" class="cta-btn">Watch Now</a>
+        </div>
       </div>
-      <p style='margin-top: 12px; color: #999;'>© <span id='year'></span> CampusXchange. All rights reserved.</p>
-    </footer>
-  </div>
 
-  <!-- Dynamic Year Script -->
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+      <!-- Example Course 2 -->
+      <div class="course-card">
+        <iframe src="https://www.youtube.com/embed/wRNinF7YQqQ" title="CSS Tutorial - CampusXchange"></iframe>
+        <div class="course-content">
+          <h3>CSS Styling Guide</h3>
+          <p>Master website styling with CSS—learn colors, layout, and responsive design.</p>
+          <a href="https://youtu.be/wRNinF7YQqQ" target="_blank" class="cta-btn">Watch Now</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Coming Soon Courses -->
+  <section>
+    <h2 class="section-title">🚀 Coming Soon</h2>
+    <div class="courses-grid">
+      <!-- Example Upcoming Course -->
+      <div class="course-card">
+        <img src="assets/Images/coming-soon.jpg" alt="JavaScript Course Coming Soon" style="width:100%; height:220px; object-fit:cover;">
+        <div class="course-content">
+          <h3>JavaScript for Beginners</h3>
+          <p>Learn how to make your website interactive and dynamic using JavaScript.</p>
+          <a href="https://www.youtube.com/@CampusXchange" target="_blank" class="cta-btn">Notify Me</a>
+        </div>
+      </div>
+
+      <div class="course-card">
+        <img src="assets/Images/coming-soon.jpg" alt="Python Course Coming Soon" style="width:100%; height:220px; object-fit:cover;">
+        <div class="course-content">
+          <h3>Python Programming Series</h3>
+          <p>Get ready to explore Python concepts, from basics to advanced projects.</p>
+          <a href="https://www.youtube.com/@CampusXchange" target="_blank" class="cta-btn">Subscribe</a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
